# wp-embeddings

./: .gitignore  AGENTS.md  README.md  TRANSFORM_README.md  VISUALIZATION_README.md  classes.py  command.py  command_interpreter_plan.md  common.py  database.py  download_chunks.py  graph_cluster_tree.py  index_pages.py  languages.csv  languages.py  migrate_to_duck_db.py  pyproject.toml  test_languages.py  test_progress_bars.py  test_topic_discovery.py  test_transform.py  topic_discovery.py  transform.py  visualize_embeddings.ipynb  visualize_embeddings.py  visualize_embeddings_notebook.ipynb
.roo/: dimensionality_processing_plan.md
modules/: __init__.py
modules/auth/: __init__.py  auth_client.py  helper.py
